--- a/.github/workflows/cpp_build.yml
+++ b/.github/workflows/cpp_build.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up C++ environment
-      uses: actions/setup-cpp@v1
+      uses: aminya/setup-cpp@v1
       with:
         compiler-version: gcc-13
 
